# AiSD

./: CMakeLists.txt
monom/: CMakeLists.txt  Monom.cpp  Monom.h
task1/: CMakeLists.txt
task1/src/: CMakeLists.txt  TBitField.cpp  TSet.cpp  main.cpp  tests.cpp
task2/: CMakeLists.txt
task2/include/: TMatrix.h  TVector.h
task2/src/: CMakeLists.txt  main.cpp
task3/: CMakeLists.txt
task3/include/: MathExpression.h  TStack.h  Table.h  TextParser.h  Translator.h  Validator.h
task3/src/: CMakeLists.txt  MathExpression.cpp  TextParser.cpp  Translator.cpp  Validator.cpp  data.txt  main.cpp
task4/: CMakeLists.txt
task4/include/: List.h  Polynomial.h
task4/src/: CMakeLists.txt  Polynomial.cpp  main.cpp
